refactor: migrate to Kotlin